# Aetherium_Automata

./: .gitignore  .mcp.json  BOARD_IMPLEMENTATION_TODO.md  CMakeLists.txt  Dockerfile.cpp  GOALS_STRATEGY_ARCH.md  LICENSE  NewProject.aeth  PLAN.md  README.md  REPORPUSE_PLAN.md  RESEARCH.md  THESIS_NOTES.md  knowlage.md  pytest.ini  test.aeth  test.sh  test_checklist.yaml
aetherium_redesign/god_mode_debugger/: code.html
aetherium_redesign/jetbrains_graphite/: DESIGN.md
aetherium_redesign/logic_state_editor/: code.html
aetherium_redesign/network_topology_intellij/: code.html
aetherium_redesign/petri_net_analysis_intellij/: code.html
docs/: Automata_YAML_Spec.md  HARDWARE_LIVE_RECOVERY.md  Lua_Runtime_API.md  TESTING_GUIDE.md  final_validation_results.md
docs/architecture/: ANALYZER_DEMONSTRATION.md  BLACK_BOX_IMPLEMENTATION.md  IOT_DEVICE_TRANSPORTS.md  SYSTEM_ARCHITECTURE.md  overview.md
docs/controller/: README.md
docs/dev/: guarded_actuation_cell.md  ros2_connector_demo.md  workflow.md
docs/engine/: README.md  quick-command-test-plan.md  usage.md
docs/protocol/: PHOENIX_CHANNELS.md  PROTOCOL_SPEC.md  overview.md
docs/servers/: README.md
example/automata/automata-yaml-examples/: blinking-led-test.yaml  command-event-gate.yaml  event-threshold-runtime.yaml  high-churn-immediate.yaml  one-state-automata-inline.yaml  probabilistic-balance-loop.yaml  production-line-stress-seconds.yaml  production-line-stress.yaml  timed-seconds-modes.yaml  timeout-vs-classic.yaml  weighted-transitions.yaml
example/automata/automata-yaml-examples/one-state-automata-folder/: State1.lua  State2.lua  Transition1.lua  one-state-automata.yaml
example/automata/automata-yaml-examples/reactor-folder/: Heat.lua  Hold.lua  Idle.lua  hold_done.lua  reach_target.lua  reactor.yaml  start_heat.lua
example/automata/automata-yaml-examples/thermostat-folder/: Cooling.lua  Idle.lua  StartCooling.lua  StopCooling.lua  thermostat.yaml
example/automata/demos/: counter-demo.yaml  dice-roller-demo.yaml  traffic-light-demo.yaml
example/automata/demos/network/: display-node.yaml  processor-node.yaml  sensor-node.yaml
example/automata/showcase/: CATALOG.txt  README.md
example/automata/showcase/01_basics/: blink_with_manual_override.yaml
example/automata/showcase/02_control/: all.aeth  (+2 more)
example/ide_demo_projects/: README.md  analyzer-contention-demo.aeth  backend-capabilities-tour.aeth  black-box-contract-tour.aeth  petri-signal-chain-demo.aeth
example/ide_demo_projects/showcase/: all.aeth
example/test/nxp/: 01_gpio_leds.yaml  02_touch_detection.yaml  03_event_on_change.yaml  04_event_rise_fall.yaml  05_event_on_threshold.yaml  06_timed_transitions.yaml  07_classic_conditions.yaml  08_signal_roundtrip.yaml  08_signal_roundtrip_host.yaml  README.md
school/presentation/: Makefile  prezentace.aux  prezentace.tex  slides_en.tex
school/theisis/: projekt-01-kapitoly-chapters-en.tex  projekt-20-literatura-bibliography.bib  projekt-30-prilohy-appendices-en.tex  projekt.aux  projekt.bbl  projekt.blg  projekt.lof  projekt.ptc  projekt.tex  projekt.toc
scripts/: final_validation_desktop.sh  final_validation_hardware.sh  generate_esp32_component_bindings.py  generate_ide_demo_projects.cjs  ros2_demo.sh  run_all.sh  test.sh  test_time_travel.py  validate_showcase_automata.sh
src/: Dockerfile.elixir  Dockerfile.phoenix  Makefile  docker-compose.yaml  logs.txt  out.debug
src/engine/: argparser.cpp  argparser.hpp  automata.hpp  automata_parser.cpp  automata_state.cpp  automata_state.hpp  automata_validator.cpp  automata_validator.hpp  engine.cpp  engine.hpp  main.cpp
src/engine/core/: aetherium.hpp  artifact.cpp  artifact.hpp  automata_loader.cpp  automata_loader.hpp  capabilities.hpp  command_bus.cpp  command_bus.hpp  compat_mutex.hpp  engine.cpp  engine.hpp  execution_trace.cpp  execution_trace.hpp  hardware_service.hpp  lua_engine.cpp  lua_engine.hpp  model.hpp  parser.hpp  protocol.cpp  protocol.hpp  protocol_v2.cpp  protocol_v2.hpp  runtime.cpp  runtime.hpp  script_engine.hpp  telemetry_log_hub.cpp  telemetry_log_hub.hpp  transport.hpp  types.hpp  variable.hpp  websocket_transport.cpp  websocket_transport.hpp
src/engine/embedded/mcxn947/: AetheriumMcxn947Hardware.hpp  AetheriumMcxn947Node.hpp  AetheriumMcxn947Platform.cpp  AetheriumMcxn947Platform.hpp  AetheriumMcxn947SerialLink.cpp  AetheriumMcxn947SerialLink.hpp  CMakeLists.txt  README.md  toolchain-arm-none-eabi.cmake
src/engine/embedded/mcxn947/examples/AetheriumMcxn947Node/: main.cpp
src/gateway/aetherium_gateway/: .gitignore  README.md  mix.exs
src/grafana/dashboards/: audit-time-travel.json  deployment-runtime.json  device-health.json  fleet-ops.json  overview.json
src/ide/: .npmrc  GATEWAY_INTEGRATION.md  README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  rewrite_editor_css.py
src/ide/src/: App.tsx  index.css
src/scripts/: host-console.sh
src/server/aetherium_server/: .gitignore  README.md  mix.exs  test_automata_local.exs
src/transport/: console_transport.cpp  console_transport.hpp  itransport.hpp  mqtt_transport.cpp  mqtt_transport.hpp
src/transport/ros2_bridge/: Dockerfile  entrypoint.sh
tests/: engine_command_smoke.cpp  engine_verification_smoke.cpp  test_engine_argparse.py  test_engine_cli.py  test_engine_cli_pytest.py
tests/data/: invalid_automata.yaml  trace_runtime.yaml
tests/spec/: engine_cli.md
theisis/sablona2025/: Makefile  PETRI_ANALYSIS_FEASIBILITY.md  THESIS_GAP_ANALYSIS.md  fitthesis.cls  projekt-01-kapitoly-chapters-en.tex  projekt-20-literatura-bibliography.bib  projekt-30-prilohy-appendices-en.tex  projekt-30-prilohy-appendices.tex  projekt.aux  projekt.bbl  projekt.blg  projekt.fdb_latexmk  projekt.fls  projekt.lof  projekt.ptc  projekt.tex  projekt.toc
theisis/sablona2025/mermaid-src/: arch.mmd  black_box_contract.mmd  fault_injection_pipeline.mmd  msgflow.mmd  petri_lifting.mmd  platform_abstraction.mmd  testing_validation_coverage.mmd  thick.css  tick_cycle.mmd  time_travel_flow.mmd  watchdog.mmd
(+399 files in other folders)
